--- a/css/lojista.scss
+++ b/css/lojista.scss
@@ -16,12 +16,24 @@ $verde: #6BB130;
 	text-shadow: none;
 }
 
+.gecko{
+	form{
+		select{
+			padding: 8px 7px !important;
+		}
+	}
+}
 
 body{
 	margin: 0;
 	padding: 0;
 
+	
+	//reset
 	h1,h2,h3,h4, h5, h6, p, span{ margin: 0; padding: 0;}
+	a,img{border: none;}
+	input:focus{outline:none;}
+	textarea{outline: none; resize:none;}
 
 	.central{
 		width: 960px;
@@ -114,6 +126,40 @@ body{
 		.content{
 			width: auto;
 			height: auto;
+
+			.btn{
+				width: 250px;
+				height: 62px;
+				display: table;
+				margin: 0 auto;
+				background: $verde;
+				border: 1px inset rgba(255, 255, 255, 0.3);
+				-webkit-border-radius: 3px;
+				-moz-border-radius: 3px;
+				border-radius: 3px;
+				font-family: $ubuntu;
+				font-size: 19px;
+				color: #fff;
+				border-color: #73bf32 #73bf32 #4d8121;
+				border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+				cursor: pointer;
+				border-bottom: 6px solid #4d8121;
+				transition: all 0.1s ease-in-out;
+				-webkit-transition: all 0.1s ease-in-out;
+				-moz-transition: all 0.1s ease-in-out;
+
+
+				span{
+					font-size: 13px;
+					position: relative;
+					top: -3px;
+				}
+
+				&:active{
+					border-bottom: 2px solid #4d8121;
+					margin: 4px auto;
+				}
+			}
 
 			.first{
 				background: $verde;
@@ -227,19 +273,249 @@ body{
 
 					}
 				}//why
+
+				
 			}//second
 
 			.third{
-				background-color: #2D2D2D;
-				background-image: -moz-linear-gradient(top, #3F3F3F, #292929);
-				background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3F3F3F), to(#292929));
-				background-image: -webkit-linear-gradient(top, #3F3F3F, #292929);
-				background-image: -o-linear-gradient(top, #3F3F3F, #292929);
-				background-image: linear-gradient(to bottom, #3F3F3F, #292929);
+				background: url(../images/noise.png);
 				width: 100%;
 				height: 350px;
+				-webkit-box-shadow: 0 4px 30px rgba(0,0,0,0.5);
+				-moz-box-shadow: 0 4px 30px rgba(0,0,0,0.5);
+				box-shadow: 0 4px 30px rgba(0,0,0,0.5);
+				position: relative;
+				z-index: 3;
+				display: table;
+			
+				h2{
+					font-family: $ubuntu;
+					color: #a2a2a2;
+					font-size: 25px;
+					text-align: center;
+					text-shadow: -1px 0 0 rgba(255,255,255, 0.5);
+					margin-top: 25px;
+				}
+				
+				#listaClientes{
+					width: auto;
+					height: 200px;
+					margin-top: 25px;
+
+					img{
+						// width: 160px;
+						// height: 120px;
+						float: left;
+						margin: 0 15px;
+						max-width: 150px;
+						vertical-align: middle;
+						display: inline-block;
+
+					}
+				}
+
+				button{}
 			}//third
+
+			.fourth{
+				background:#1e1e1e;
+				position: relative;
+				z-index: 2;
+				height: 545px;
+
+				.left{
+					width: 400px;
+					margin-top: 35px;
+					float: left;
+					height: auto;
+
+					h2{
+						font-family: $ubuntu;
+						color: #4c4c4c;
+					}
+					.depoimento{
+						width: 100%;
+						height: auto;
+						margin-top: 10px;
+
+						span{
+							font-family: Georgia;
+							font-size: 60px;
+							font-style: italic;
+							float: left;
+							width: 30px;
+							height: 30px;
+							-webkit-transform: rotate(180deg);
+							-moz-transform: rotate(180deg);
+							-ms-transform: rotate(180deg);
+							-o-transform: rotate(180deg);
+							transform: rotate(180deg);
+							position: relative;
+							top: 40px;
+							left: -5px;
+							color: rgba(255,255,255,0.1);
+						}
+
+						.article{
+							font-family: Georgia;
+							font-style: italic;
+							font-size: 14px;
+							line-height: 18px;
+							font-weight: normal;
+							width: auto;
+							color: #bcbcbc;
+							text-align: justify;
+						}
+
+						h5{
+							font-family: Arial;
+							font-size: 13px;
+							font-weight: normal;
+							margin-top: 6px;
+							color: #fff;
+						}
+					}
+				}
+
+				.form{
+					width: 450px;
+					float: left;
+					margin-left: 65px;
+					margin-top: 35px;
+
+
+					input,select{
+						width: 360px;
+						height: 34px;
+						border: 0;
+						float: left;
+						padding: 1px 2px;
+						margin: 5px 0;
+						background: #464646;
+						padding-left: 20px;
+						color:#fff;
+						font-size: 14px;
+						font-weight: normal;
+
+
+					}
+					
+					input, label, textarea{
+						border-bottom: 4px solid #282828;
+						transition: all 0.5s ease-in-out;
+						-webkit-transition: all 0.5s ease-in-out;
+						-moz-transition: all 0.5s ease-in-out;
+					}
+
+					input, textarea{
+						&:focus{
+							border-bottom: 4px solid $verde;
+						}
+					}
+
+					label{
+						// border-bottom: 4px solid #282828;
+						background: #464646;
+						width: 380px;
+						height: 30px;
+						position: relative;
+						// padding: 6px;
+						float: left;
+						padding: 2px 2px 2px 0;
+						top: 5px;
+						bottom: 5px;
+
+						&:active{
+							border-bottom: 4px solid $verde;
+						}
+
+						&.cidade{
+							top: 15px;
+						}
+
+						&:before{
+							position: absolute;
+							right: 4px;
+							top: 2px;
+							content: " ";
+							display: block;
+							width: 20px;
+							height: 24px;
+							background: #464646;
+							pointer-events: none;
+							z-index: 2;
+						}
+
+						&:after{
+							position: absolute;
+							top: 50%;
+							right: 8px;
+							width: 0;
+							height: 0;
+							content: " ";
+							margin-top: -2px;
+							border-left: 4px solid transparent;
+							border-right: 4px solid transparent;
+							border-top: 4px solid #fff;
+							pointer-events: none;
+							z-index: 2;
+						}
+
+						select{
+							-webkit-border-radius: none;
+							-moz-border-radius: none;
+							border-radius: none;
+							-webkit-appearance: none;
+							-moz-appearance: none;
+							appearance: none;
+							cursor: pointer;
+							outline:none;
+							position: relative;
+							top: -7px;
+							width: 380px;
+							display: inline-block;
+
+							option{
+								background: #464646; 
+								color: #f2f2f2;
+								-webkit-appearance: none;
+								-moz-appearance: none;
+								appearance: none;
+							}
+
+						}
+
+					}
+
+					textarea{
+						width: 362px;
+						padding: 5px 0 0 20px;
+						margin-top: 25px;
+						height: 130px;
+						border-left:0;
+						border-top: 0;
+						border-right:0;
+						background: #464646;
+						font-size: 12px;
+						color: #fff;
+					}
+
+					.btn{
+						width: 380px;
+						height: 35px;
+						-webkit-border-radius: 0;
+						-moz-border-radius: 0;
+						border-radius: 0;	
+						float: left;
+						margin-top: 10px;
+						font-size: 19px;
+	
+					}
+
+				}
+			}
 
 		} //content
 	}
+
 }
