--- a/css/lojista.scss
+++ b/css/lojista.scss
@@ -280,7 +280,7 @@ body{
 			.third{
 				background: url(../images/noise.png);
 				width: 100%;
-				height: 350px;
+				height: auto;
 				-webkit-box-shadow: 0 4px 30px rgba(0,0,0,0.5);
 				-moz-box-shadow: 0 4px 30px rgba(0,0,0,0.5);
 				box-shadow: 0 4px 30px rgba(0,0,0,0.5);
@@ -299,7 +299,7 @@ body{
 				
 				#listaClientes{
 					width: auto;
-					height: 200px;
+					height: 185px;
 					margin-top: 25px;
 
 					img{
@@ -308,13 +308,33 @@ body{
 						float: left;
 						margin: 0 15px;
 						max-width: 150px;
-						vertical-align: middle;
+						vertical-align: middle; 
 						display: inline-block;
 
 					}
 				}
 
-				button{}
+				.doIt{
+					width: auto;
+					height: auto;
+					font-size: 25px;
+					font-family: $ubuntu;
+					color: rgb(130, 218, 56);
+					text-align: center;
+					margin: 40px auto 0 auto;
+					display: table;
+					font-weight: bold;
+					text-decoration: none;
+					padding: 11px 21px;
+					background: #161616;
+					border-radius: 23px 23px 0 0;
+					-moz-border-radius: 23px 23px 0 0;
+					-webkit-border-radius: 23px 23px 0 0;
+
+					
+					
+					
+				}
 			}//third
 
 			.fourth{
@@ -324,7 +344,7 @@ body{
 				height: 545px;
 
 				.left{
-					width: 400px;
+					width: 450px;
 					margin-top: 35px;
 					float: left;
 					height: auto;
@@ -358,8 +378,9 @@ body{
 
 						.article{
 							font-family: Georgia;
-							font-style: italic;
-							font-size: 14px;
+							font-style: italic; 
+							font-size: 13px;
+							margin-top: 25px;
 							line-height: 18px;
 							font-weight: normal;
 							width: auto;
@@ -380,17 +401,26 @@ body{
 				.form{
 					width: 450px;
 					float: left;
-					margin-left: 65px;
+					margin-left: 60px;
 					margin-top: 35px;
 
+					h3{
+						font-family: $ubuntu;
+						font-size: 22px;
+						color: #7E826F;
+					}
 
+					h5{
+						font-weight: normal;
+						color: #fff;
+						font-family: Arial;
+						margin: 10px 0;
+					}
 					input,select{
-						width: 360px;
 						height: 34px;
 						border: 0;
 						float: left;
 						padding: 1px 2px;
-						margin: 5px 0;
 						background: #464646;
 						padding-left: 20px;
 						color:#fff;
@@ -399,15 +429,38 @@ body{
 
 
 					}
+
+					.input{
+						display: table;
+						width: 435px;
+						height: 30px;
+						position: relative;
+						top: -14px;
+					}
+
+					input{
+						width: 315px;
+						padding-left: 114px;
+						margin: -5px 0;
+					}
 					
 					input, label, textarea{
-						border-bottom: 4px solid #282828;
+						border-bottom: 4px solid #313131;
 						transition: all 0.5s ease-in-out;
 						-webkit-transition: all 0.5s ease-in-out;
 						-moz-transition: all 0.5s ease-in-out;
+						
+						&.ok{
+							border-bottom: 4px solid $verde;
+						}
+
+						&.error{
+							border-bottom: 4px solid #F73C40;
+						}
 					}
 
 					input, textarea{
+						
 						&:focus{
 							border-bottom: 4px solid $verde;
 						}
@@ -416,21 +469,19 @@ body{
 					label{
 						// border-bottom: 4px solid #282828;
 						background: #464646;
-						width: 380px;
+						width: 209px;
 						height: 30px;
 						position: relative;
 						// padding: 6px;
 						float: left;
 						padding: 2px 2px 2px 0;
-						top: 5px;
-						bottom: 5px;
 
-						&:active{
+						&.active{
 							border-bottom: 4px solid $verde;
 						}
 
 						&.cidade{
-							top: 15px;
+							left: 9px;
 						}
 
 						&:before{
@@ -472,8 +523,9 @@ body{
 							outline:none;
 							position: relative;
 							top: -7px;
-							width: 380px;
+							width: 209px;
 							display: inline-block;
+							margin: 5px 0;
 
 							option{
 								background: #464646; 
@@ -486,11 +538,21 @@ body{
 						}
 
 					}
+					.placeholder{
+						width: 106px;
+						position: relative;
+						top: 22px;
+						left: 5px;
+						font-family: $ubuntu;
+						font-weight: normal;
+						color: #8F8F8F;
+						border-right: 1px solid #57594D;
+						cursor: default;
+					}
 
 					textarea{
-						width: 362px;
 						padding: 5px 0 0 20px;
-						margin-top: 25px;
+						margin-top: 10px;
 						height: 130px;
 						border-left:0;
 						border-top: 0;
@@ -498,17 +560,33 @@ body{
 						background: #464646;
 						font-size: 12px;
 						color: #fff;
+						float: left;
+						width: 409px;
+						font-family: Arial;
+						font-size: 13px;
 					}
 
 					.btn{
-						width: 380px;
+						width: 428px;
 						height: 35px;
 						-webkit-border-radius: 0;
 						-moz-border-radius: 0;
 						border-radius: 0;	
-						float: left;
+						float: left; 
 						margin-top: 10px;
 						font-size: 19px;
+						transition: all 0.5s ease-in-out;
+						-webkit-transition: all 0.5s ease-in-out;
+						-moz-transition: all 0.5s ease-in-out;
+
+						&.error{
+
+							&:hover{
+								background: #F73C40;
+								border-bottom: 6px solid #C6090D;
+								cursor: pointer;
+							}
+						}
 	
 					}
 
