--- a/css/lojista.scss
+++ b/css/lojista.scss
@@ -105,7 +105,7 @@ body{
 						height: 22px;
 						float: left;
 						top: 10px;
-						@include opacityCB(5);
+						color: #595B4F;
 
 					}
 
