--- a/css/index.scss
+++ b/css/index.scss
@@ -337,6 +337,47 @@ body{
 
 		}
 
+		#modalCategorias{
+			width: 700px;
+
+			.categoria{
+				width: 130px;
+				height: 130px;
+				float: left;
+				margin: 15px;
+				-webkit-border-radius: 3px;
+				-moz-border-radius: 3px;
+				border-radius: 3px;
+				background: $verde;
+				box-shadow: 0 0 5px rgba(0,0,0,0.2);
+				-moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+				-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+				-webkit-transition: all 0.4s ease-in-out;
+				-moz-transition: all 0.4s ease-in-out;
+				-ms-transition: all 0.4s ease-in-out;
+				-o-transition: all 0.4s ease-in-out;
+				h6{
+					text-align: center;
+					text-decoration: none;
+					color: #fff;
+
+				}
+
+				&.categoria1{
+					&:hover{
+						background:$roupas;
+					}
+
+				}
+				&.active{
+					box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+					-moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+					-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+
+				}
+			}
+		}
+
 		#container{
 			min-height: 100%;
 			height: auto !important;
