--- a/css/index.scss
+++ b/css/index.scss
@@ -337,6 +337,7 @@ body{
 
 		#modalCategorias{
 			width: 700px;
+			left: 46%;
 
 			.categoria{
 				width: 130px;
@@ -347,9 +348,9 @@ body{
 				-moz-border-radius: 3px;
 				border-radius: 3px;
 				background: #7a7a7a;
-				box-shadow: 0 0 5px rgba(0,0,0,0.2);
-				-moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
-				-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+				// box-shadow: 0 0 5px rgba(0,0,0,0.2);
+				// -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+				// -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
 				-webkit-transition: all 0.25s ease-in-out;
 				-moz-transition: all 0.25s ease-in-out;
 				-ms-transition: all 0.25s ease-in-out;
@@ -362,81 +363,182 @@ body{
 					color: #fff;
 
 				}
+				
+				.icon{
+					margin: 0 auto;
+					width: 68px;
+					height: 68px;
+					float: none;
+					background: url(../images/sprite-categorias68.png) no-repeat center top;
+				}
 
 				&.categoria1{ 
 					&:hover, &.active{background: #ff5c42;}
+					.icon{background-position: 0 0;}
 				} //alimentos
 				
 				&.categoria2{ 
 					&:hover, &.active{background: #5d2bff;}
-				} //sapatos
+					
+					.icon{
+						background-position: -80px 0;
+						width: 76px;
+						height: 81px;
+					}
+				} //calcados
 				
 				&.categoria3{ 
 					&:hover, &.active{background: #0e64e7;}
+
+					.icon{
+						background-position: -776px;
+						width: 40px;
+						height: 86px;
+					}
+
+					
 				} //moda masculina
 				
 				&.categoria4{ 
 					&:hover, &.active{background: #ff4690;}
+
+					.icon{
+						width: 37px;
+						background-position: -818px;
+						height: 85px;
+					}
 				} //moda feminina
 				
 				&.categoria5{ 
 					&:hover, &.active{background: #ff5efe;}
+
+					.icon{ background-position: -895px; }
 				} //moda infantil
 				
 				&.categoria6{ 
 					&:hover, &.active{background: #00A550;}
+
+					.icon{
+						background-position: -516px 0;
+						height: 72px;
+						width: 59px;
+					}
 				} //esportes/fitness
 				  
 				&.categoria7{ 
 					&:hover, &.active{background: #32d89b;}
+					
+					.icon{
+						background-position: -295px 0;
+						width: 42px;
+						height: 78px;
+					}
 				} //decoracao
 				
 				&.categoria8{ 
 					&:hover, &.active{background: #629fff;}
+
+					.icon{
+						background-position: -175px;
+						width: 100px;
+					}
 				} //cama/mesa/banho
 				
 				&.categoria9{ 
 					&:hover, &.active{background: #ff660c;}
+					.icon{
+						background-position: -439px 0;
+					}
 				} //entretenimento
 				
 				&.categoria10{ 
 					&:hover, &.active{background: $verde;}
+
+					.icon{
+						background-position: -1397px;
+						width: 77px;
+						height: 74px;
+					}
 				} //servicos
 				
 				&.categoria11{ 
 					&:hover, &.active{background: #daa900;}
+
+					.icon{
+						background-position: -1193px;
+						width: 89px;
+					}
 				} //joias
 				
 				&.categoria12{ 
 					&:hover, &.active{background: #008199;}
+
+					.icon{
+						background-position: -359px 0;
+						width: 75px;
+					}
 				} //eletro/eletronicos
 				
 				&.categoria13{ 
 					&:hover, &.active{background: #2e4c92;}
+					.icon{
+						background-position: -1495px;
+						width: 97px;
+					}
 				} //informatica
 		
 				&.categoria14{ 
-					&:hover, &.active{background: #566792 }}
-				//livraria/papelaria
+					&:hover, &.active{background: #566792 }
+
+					.icon{
+						background-position: -1085px;
+						width: 89px;
+					}
+				}//livraria/papelaria
 				
 				&.categoria15{ 
 					&:hover, &.active{background: #c1000f;}
+					
+					.icon{
+						background-position: -590px 0;
+						width: 75px;
+						height: 72px;
+					}
 				} //farmacia
 				
 				&.categoria16{ 
 					&:hover, &.active{background: #560acd;}
+
+					.icon{
+						background-position: -988px;
+						width: 84px;
+						height: 78px;
+					}
 				} //perfumes, cosmeticos
 				
 				&.categoria17{ 
 					&:hover, &.active{background: #797979;}
+
+					.icon{
+						background-position: -680px;
+						width: 71px;
+						height: 71px;
+					}
 				} //informativo
 				
 				&.categoria18{ 
 					&:hover, &.active{background: #ffc424;}
+
+					.icon {background-position: -1614px; }
 				} //turismo
 				
 				&.categoria19{ 
 					&:hover, &.active{background: #7498ff;}
+
+					.icon{
+						background-position: -1293px;
+						width: 90px;
+					}
 				} //jogos, brinquedos
 
 
@@ -446,6 +548,8 @@ body{
 					-webkit-box-shadow: inset 0 0 15px rgba(0,0,0,0.4);
 
 				}
+
+				
 			}
 		}
 
